--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,15 @@ dependencies = [
     "flask-sqlalchemy (>=3.1.1,<4.0.0)",
     "pymysql (>=1.1.2,<2.0.0)",
     "ruff (>=0.14.4,<0.15.0)",
-    "mypy (>=1.18.2,<2.0.0)"
+    "mypy (>=1.18.2,<2.0.0)",
+    "flasgger (>=0.9.7.1,<0.10.0.0)",
+    "cryptography (>=46.0.3,<47.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+ignore_missing_imports = true
