--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,9 @@ services:
       - "${FLASK_RUN_PORT}:5000"
     depends_on:
       - db
+    volumes:
+      - ./app:/app/app  # <-- монтируем локальную папку app
+    command: flask run --host=0.0.0.0 --reload
 
 volumes:
   mysql_data:
