--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,10 @@ dependencies = [
     "mypy (>=1.18.2,<2.0.0)",
     "cryptography (>=46.0.3,<47.0.0)",
     "flask-jwt-extended (>=4.7.1,<5.0.0)",
-    "flask-smorest (>=0.46.2,<0.47.0)"
+    "flask-smorest (>=0.46.2,<0.47.0)",
+    "dotenv (>=0.9.9,<0.10.0)",
+    "flask-migrate (>=4.1.0,<5.0.0)",
+    "alembic (>=1.17.2,<2.0.0)"
 ]
 
 
