--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
     "flask-smorest (>=0.46.2,<0.47.0)",
     "dotenv (>=0.9.9,<0.10.0)",
     "flask-migrate (>=4.1.0,<5.0.0)",
-    "alembic (>=1.17.2,<2.0.0)"
+    "alembic (>=1.17.2,<2.0.0)",
+    "pytest (>=9.0.1,<10.0.0)",
+    "factory-boy (>=3.3.3,<4.0.0)"
 ]
 
 
