--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "flask-migrate (>=4.1.0,<5.0.0)",
     "alembic (>=1.17.2,<2.0.0)",
     "pytest (>=9.0.1,<10.0.0)",
-    "factory-boy (>=3.3.3,<4.0.0)"
+    "factory-boy (>=3.3.3,<4.0.0)",
+    "pandas (>=2.3.3,<3.0.0)"
 ]
 
 
